# latent-resonance

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  reconstruct_samples.py  statement-of-originality.yml
latent_resonance/: __init__.py  generator.py  mapping.py  stream.py  tracker.py
latent_resonance/dataset/: __init__.py  cli.py  dataset.py  processing.py  scraper.py
notebooks/: train-stylegan2-ada-kaggle.ipynb  train-stylegan3-kaggle.ipynb  train-stylegan3.ipynb  train_stylegan2_ada_kaggle.ipynb  train_stylegan3.ipynb  train_stylegan3_kaggle.ipynb
tests/: test_processing.py
